CSS fix for newsletter submit button rendering issue on Safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,7 @@ div.author .embeddable-buttondown-form input[type="submit"] {
   font-size: 25px;
   position: relative;
   top: 2px;
+  -webkit-appearance: none;
 }
 div.author hr {
   border: 0;
